fix: fixing horizontal scroll in playing quizz page

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ article p {
   position: absolute;
 }
 
-.teste {
+.all-server-quizzes {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -174,6 +174,7 @@ article p {
   flex-direction: column;
   align-items: center;
   margin-top: 69px;
+  overflow-x: hidden;
 }
 
 .quizz-title-container {
